--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:3000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
